RESOLVED FIXED300767
AX: Fix ENABLE_ACCESSIBILITY_LOCAL_FRAME build failures for iOS
https://bugs.webkit.org/show_bug.cgi?id=300767
Summary AX: Fix ENABLE_ACCESSIBILITY_LOCAL_FRAME build failures for iOS
Joshua Hoffman
Reported 2025-10-14 19:40:23 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-14 19:40:29 PDT
Joshua Hoffman
Comment 2 2025-10-14 19:42:24 PDT
EWS
Comment 3 2025-10-15 09:37:11 PDT
Committed 301566@main (997a41058b9a): <https://commits.webkit.org/301566@main> Reviewed commits have been landed. Closing PR #52359 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.