AX: Fix ENABLE_ACCESSIBILITY_LOCAL_FRAME build failures for iOS https://bugs.webkit.org/show_bug.cgi?id=300767 rdar://162650410

Reviewed by Tyler Wilcock.

Build fix for when ENABLE_ACCESSIBILITY_LOCAL_FRAME is enabled.

* Source/WebCore/accessibility/AXLocalFrame.cpp:
* Source/WebCore/accessibility/AccessibilityScrollView.cpp:
(WebCore::AccessibilityScrollView::addLocalFrameChild):

Canonical link: https://commits.webkit.org/301566@main